cargo-features = ["edition2024"]

[package]
name = "soldb_program"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
solana-program = "2.3.0"

[dev-dependencies]
solana-program-test = "2.3.5"
solana-sdk = "2.3.1"
solana-transaction-status = "2.3.5"
tokio = "1.46.1"
